@@ -39,13 +39,17 @@ INSTALL (PROGRAMS ${bld}/squeakvm DESTINATION ${plgdir})
 
 CONFIGURE_FILE (${config}/config.in ${bld}/config @ONLY)
 
-# launcher script
+# launcher scripts
 
 ADD_CUSTOM_TARGET (squeak
   DEPENDS ${config}/squeak.in
   COMMAND sh ${bld}/config ${config}/squeak.in ${bld}/squeak
 )
-ADD_DEPENDENCIES (squeakvm squeak)
+ADD_CUSTOM_TARGET (squeak.sh
+  DEPENDS ${config}/squeak.sh.in
+  COMMAND sh ${bld}/config ${config}/squeak.sh.in ${bld}/squeak.sh
+)
+ADD_DEPENDENCIES (squeakvm squeak squeak.sh)
 INSTALL (PROGRAMS ${bld}/squeak DESTINATION bin)
 
 # manual page
